--- a/scikit-learn/classification/iris_parameterized/train.ipynb
+++ b/scikit-learn/classification/iris_parameterized/train.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\MachineLearning\\anaconda3\\envs\\tf2-gpu\\lib\\site-packages\\sklearn\\externals\\joblib\\__init__.py:15: FutureWarning: sklearn.externals.joblib is deprecated in 0.21 and will be removed in 0.23. Please import this functionality directly from joblib, which can be installed with: pip install joblib. If this warning is raised when loading pickled models, you may need to re-serialize those models with scikit-learn 0.21+.\n",
-      "  warnings.warn(msg, category=FutureWarning)\n"
+      "Overwriting train.py\n"
      ]
     }
    ],
    "source": [
+    "%%writefile train.py\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import os\n",
@@ -23,27 +24,37 @@
     "from sklearn.externals import joblib\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import accuracy_score"
+    "from sklearn.metrics import accuracy_score\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ['SM_MODEL_DIR']='.'\n",
-    "os.environ['SM_CHANNEL_TRAINING']='./data'\n",
-    "os.environ['max_iter']='10'\n",
-    "os.environ['class_weight']='balanced'"
+    "#os.environ['SM_MODEL_DIR']='.'\n",
+    "#os.environ['SM_CHANNEL_TRAINING']='./data'\n",
+    "#os.environ['max_iter']='10'\n",
+    "#os.environ['class_weight']='balanced'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to train.py\n"
+     ]
+    }
+   ],
    "source": [
+    "%%writefile -a train.py\n",
+    "\n",
     "def train_model(data_loc_dir, \n",
     "                max_iter_param,\n",
     "               class_weight_param):\n",
@@ -79,29 +90,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "----> started model training\n",
-      "---------------> Passed location for data is -> ./data\n",
-      "---------------> Files at this location are -> ['iris.csv']\n",
-      "---------------> Reading data from -> ./data/iris.csv\n",
-      "---------------> Starting to fit model\n",
-      "\t---------------> Max Iteration =  100\n",
-      "\t---------------> Class Weigth =  balanced\n",
-      "---------------> Starting to predict on test data\n",
-      "\t---------------> Accuracy 0.9473684210526315\n",
-      "----> ended model training\n",
-      "\t----> started model dump\n",
-      "\t----> ended model dump\n"
+      "Appending to train.py\n"
      ]
     }
    ],
    "source": [
+    "%%writefile -a train.py\n",
+    "\n",
     "if __name__ =='__main__':\n",
     "\n",
     "    parser = argparse.ArgumentParser()\n",
@@ -145,9 +147,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "conda_tensorflow_p36",
    "language": "python",
-   "name": "python3"
+   "name": "conda_tensorflow_p36"
   },
   "language_info": {
    "codemirror_mode": {
@@ -159,7 +161,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
