--- a/scikit-learn/classification/cancer_decision_tree/train.ipynb
+++ b/scikit-learn/classification/cancer_decision_tree/train.ipynb
@@ -2,10 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing train.py\n"
+     ]
+    }
+   ],
    "source": [
+    "%%writefile train.py\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import os\n",
@@ -19,22 +29,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ['SM_MODEL_DIR']='.'\n",
-    "os.environ['SM_CHANNEL_TRAINING']='./data'\n",
-    "os.environ['max_depth_param']='10'\n",
-    "os.environ['max_features_param']='10'"
+    "#os.environ['SM_MODEL_DIR']='.'\n",
+    "#os.environ['SM_CHANNEL_TRAINING']='./data'\n",
+    "#os.environ['max_depth_param']='10'\n",
+    "#os.environ['max_features_param']='10'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to train.py\n"
+     ]
+    }
+   ],
    "source": [
+    "%%writefile -a train.py\n",
+    "\n",
     "def train_model(data_loc_dir, \n",
     "                max_depth_param,\n",
     "               max_features_param):\n",
@@ -70,29 +90,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "----> started model training\n",
-      "---------------> Passed location for data is -> ./data\n",
-      "---------------> Files at this location are -> ['.ipynb_checkpoints', 'cancer.csv']\n",
-      "---------------> Reading data from -> ./data/cancer.csv\n",
-      "---------------> Starting to fit model\n",
-      "\t---------------> Max Depth =  10\n",
-      "\t---------------> Max Features =  20\n",
-      "---------------> Starting to predict on test data\n",
-      "\t---------------> F1-Score 0.9673913043478262\n",
-      "----> ended model training\n",
-      "\t----> started model dump\n",
-      "\t----> ended model dump\n"
+      "Appending to train.py\n"
      ]
     }
    ],
    "source": [
+    "%%writefile -a train.py\n",
+    "\n",
     "if __name__ =='__main__':\n",
     "\n",
     "    parser = argparse.ArgumentParser()\n",
@@ -136,9 +147,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "conda_tensorflow_p36",
    "language": "python",
-   "name": "python3"
+   "name": "conda_tensorflow_p36"
   },
   "language_info": {
    "codemirror_mode": {
@@ -150,7 +161,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
