automl workflow using sagemaker sdk

--- a/snowflake/bank-marketing-model/dataacquisition.ipynb
+++ b/snowflake/bank-marketing-model/dataacquisition.ipynb
@@ -57,21 +57,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2020-07-24 20:06:39--  https://datahub.io/machine-learning/bank-marketing/r/bank-marketing.csv\n",
-      "Resolving datahub.io (datahub.io)... 172.67.157.38, 104.18.48.253, 104.18.49.253, ...\n",
+      "--2020-07-25 10:22:56--  https://datahub.io/machine-learning/bank-marketing/r/bank-marketing.csv\n",
+      "Resolving datahub.io (datahub.io)... 172.67.157.38, 104.18.49.253, 104.18.48.253, ...\n",
       "Connecting to datahub.io (datahub.io)|172.67.157.38|:443... connected.\n",
       "HTTP request sent, awaiting response... 302 Found\n",
       "Location: https://pkgstore.datahub.io/machine-learning/bank-marketing/bank-marketing_csv/data/000466faca88d1fc9961b0fe85ff995f/bank-marketing_csv.csv [following]\n",
-      "--2020-07-24 20:06:40--  https://pkgstore.datahub.io/machine-learning/bank-marketing/bank-marketing_csv/data/000466faca88d1fc9961b0fe85ff995f/bank-marketing_csv.csv\n",
-      "Resolving pkgstore.datahub.io (pkgstore.datahub.io)... 172.67.157.38, 104.18.49.253, 104.18.48.253, ...\n",
+      "--2020-07-25 10:22:57--  https://pkgstore.datahub.io/machine-learning/bank-marketing/bank-marketing_csv/data/000466faca88d1fc9961b0fe85ff995f/bank-marketing_csv.csv\n",
+      "Resolving pkgstore.datahub.io (pkgstore.datahub.io)... 172.67.157.38, 104.18.48.253, 104.18.49.253, ...\n",
       "Connecting to pkgstore.datahub.io (pkgstore.datahub.io)|172.67.157.38|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 3700750 (3.5M) [text/csv]\n",
       "Saving to: ‘bank-marketing.csv’\n",
       "\n",
-      "bank-marketing.csv  100%[===================>]   3.53M  --.-KB/s    in 0.06s   \n",
+      "bank-marketing.csv  100%[===================>]   3.53M  --.-KB/s    in 0.07s   \n",
       "\n",
-      "2020-07-24 20:06:41 (54.9 MB/s) - ‘bank-marketing.csv’ saved [3700750/3700750]\n",
+      "2020-07-25 10:22:57 (48.9 MB/s) - ‘bank-marketing.csv’ saved [3700750/3700750]\n",
       "\n"
      ]
     }
@@ -91,15 +91,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 3728\n",
-      "-rw-r--r-- 1 root root 3700750 Aug 22  2018 bank-marketing.csv\n",
-      "-rw-r--r-- 1 root root   10687 Jul 24 19:59 0_checking_versions.ipynb\n",
-      "-rw-r--r-- 1 root root   13877 Jul 24 19:59 1_connecting_snowflake.ipynb\n",
-      "-rw-r--r-- 1 root root   16449 Jul 24 19:59 1_connecting_snowflake_localhost.ipynb\n",
-      "-rw-r--r-- 1 root root    8096 Jul 24 19:59 2_persisting_trained_model_in_snowflake.ipynb\n",
-      "-rw-r--r-- 1 root root    6976 Jul 24 19:59 3_spark_node_snowflake_data_access.ipynb\n",
-      "-rw-r--r-- 1 root root   41786 Jul 24 19:59 4_spark_snowflake_biggerdataset.ipynb\n",
-      "-rw-r--r-- 1 root root      72 Jul 24 20:05 bank-marketing.ipynb\n"
+      "total 3892\n",
+      "-rw-r--r--  1 root root 3700750 Aug 22  2018 bank-marketing.csv\n",
+      "drwxr-xr-x 25 root root    6144 Jul 21 11:04 amazon-sagemaker-examples\n",
+      "-rw-r--r--  1 root root  193631 Jul 22 11:55 SageMaker-Enable-Model-Monitor.ipynb\n",
+      "drwxr-xr-x  8 root root    6144 Jul 24 19:59 aws_sagemaker\n",
+      "drwxr-xr-x  5 root root    6144 Jul 24 20:05 ml-mushrooms-data-classifiers\n",
+      "-rw-r--r--  1 root root   20496 Jul 25 06:47 SageMakerAutopilotDataExplorationNotebook.ipynb\n",
+      "-rw-r--r--  1 root root   47921 Jul 25 06:47 SageMakerAutopilotCandidateDefinitionNotebook.ipynb\n"
      ]
     }
    ],
@@ -109,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +272,7 @@
        "4  may  198    1   -1    0  unknown      1  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,18 +287,181 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>V1</th>\n",
+       "      <th>V2</th>\n",
+       "      <th>V3</th>\n",
+       "      <th>V4</th>\n",
+       "      <th>V5</th>\n",
+       "      <th>V6</th>\n",
+       "      <th>V7</th>\n",
+       "      <th>V8</th>\n",
+       "      <th>V9</th>\n",
+       "      <th>V10</th>\n",
+       "      <th>V11</th>\n",
+       "      <th>V12</th>\n",
+       "      <th>V13</th>\n",
+       "      <th>V14</th>\n",
+       "      <th>V15</th>\n",
+       "      <th>V16</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>58</td>\n",
+       "      <td>technician</td>\n",
+       "      <td>married</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>no</td>\n",
+       "      <td>71</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>no</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>5</td>\n",
+       "      <td>may</td>\n",
+       "      <td>71</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>unknown</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>57</td>\n",
+       "      <td>services</td>\n",
+       "      <td>married</td>\n",
+       "      <td>secondary</td>\n",
+       "      <td>no</td>\n",
+       "      <td>162</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>no</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>5</td>\n",
+       "      <td>may</td>\n",
+       "      <td>174</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>unknown</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>60</td>\n",
+       "      <td>retired</td>\n",
+       "      <td>married</td>\n",
+       "      <td>primary</td>\n",
+       "      <td>no</td>\n",
+       "      <td>60</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>no</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>5</td>\n",
+       "      <td>may</td>\n",
+       "      <td>219</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>unknown</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>59</td>\n",
+       "      <td>blue-collar</td>\n",
+       "      <td>married</td>\n",
+       "      <td>secondary</td>\n",
+       "      <td>no</td>\n",
+       "      <td>0</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>no</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>5</td>\n",
+       "      <td>may</td>\n",
+       "      <td>226</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>unknown</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>25</td>\n",
+       "      <td>blue-collar</td>\n",
+       "      <td>married</td>\n",
+       "      <td>secondary</td>\n",
+       "      <td>no</td>\n",
+       "      <td>-7</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>no</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>5</td>\n",
+       "      <td>may</td>\n",
+       "      <td>365</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>unknown</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    V1           V2       V3         V4  V5   V6   V7  V8       V9  V10  V11  \\\n",
+       "13  58   technician  married    unknown  no   71  yes  no  unknown    5  may   \n",
+       "14  57     services  married  secondary  no  162  yes  no  unknown    5  may   \n",
+       "18  60      retired  married    primary  no   60  yes  no  unknown    5  may   \n",
+       "33  59  blue-collar  married  secondary  no    0  yes  no  unknown    5  may   \n",
+       "36  25  blue-collar  married  secondary  no   -7  yes  no  unknown    5  may   \n",
+       "\n",
+       "    V12  V13  V14  V15      V16  \n",
+       "13   71    1   -1    0  unknown  \n",
+       "14  174    1   -1    0  unknown  \n",
+       "18  219    1   -1    0  unknown  \n",
+       "33  226    1   -1    0  unknown  \n",
+       "36  365    1   -1    0  unknown  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# split data into test and training\n",
     "train_data = data.sample(frac=0.8, random_state=RANDOM_STATE)\n",
-    "test_data = data.drop(train_data.index)"
+    "test_data = data.drop(train_data.index)\n",
+    "\n",
+    "test_data = test_data.drop(['Class'],axis=1)\n",
+    "test_data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
