added experiment tracking logic

--- a/scikit-learn/classification/iris_parameterized/train.ipynb
+++ b/scikit-learn/classification/iris_parameterized/train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -24,12 +24,13 @@
     "from sklearn.externals import joblib\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import accuracy_score\n"
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import f1_score\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -83,14 +84,15 @@
     "    print ('---------------> Starting to predict on test data')\n",
     "    pred_y = model.predict(test_x)\n",
     "    \n",
-    "    print ('\\t---------------> Accuracy %s'%(accuracy_score(test_y, pred_y)))\n",
+    "    print ('Test Accuracy: %s'%(accuracy_score(test_y, pred_y)))\n",
+    "    print ('Test F1-Score: %s'%(accuracy_score(test_y, pred_y)))\n",
     "    \n",
     "    return model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -146,10 +148,11 @@
   }
  ],
  "metadata": {
+  "instance_type": "ml.t3.medium",
   "kernelspec": {
-   "display_name": "conda_tensorflow_p36",
+   "display_name": "Python 3 (Data Science)",
    "language": "python",
-   "name": "conda_tensorflow_p36"
+   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-1:470317259841:image/datascience-1.0"
   },
   "language_info": {
    "codemirror_mode": {
@@ -161,7 +164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
