--- a/scikit-learn/classification/iris_basic/executor.ipynb
+++ b/scikit-learn/classification/iris_basic/executor.ipynb
@@ -364,10 +364,11 @@
   }
  ],
  "metadata": {
+  "instance_type": "ml.t3.medium",
   "kernelspec": {
-   "display_name": "conda_tensorflow_p36",
+   "display_name": "Python 3 (Data Science)",
    "language": "python",
-   "name": "conda_tensorflow_p36"
+   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-1:470317259841:image/datascience-1.0"
   },
   "language_info": {
    "codemirror_mode": {
@@ -379,7 +380,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
