--- a/scikit-learn/classification/iris_parameterized/preprocess.ipynb
+++ b/scikit-learn/classification/iris_parameterized/preprocess.ipynb
@@ -77,10 +77,11 @@
   }
  ],
  "metadata": {
+  "instance_type": "ml.t3.medium",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (Data Science)",
    "language": "python",
-   "name": "python3"
+   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-1:470317259841:image/datascience-1.0"
   },
   "language_info": {
    "codemirror_mode": {
